Update Stack的执行结果.md